# S_Trajectory_grpc

./: Dockerfile  README.md  STrajectoryPara.py  S_Acceleration.py  S_Jerk.py  S_Position.py  S_Velocity.py  Trajectory.py  client.py  generalAPI_pb2.py  generalAPI_pb2_grpc.py  pyproject.toml  requirements.txt  server.py
beifen/: client.py  generalAPI.proto  server.py
configs/: 3D.json  config.json
protobufs/: generalAPI.proto
